# MDTA

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/fr/mdta/mdta/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  simple-ls.cpp
app/src/main/java/fr/mdta/mdta/: CustomScanActivity.java  CustomScanAdapter.java  FilesScanner.java  MainActivity.java  ResultActivity.java  ResultSpecificAppActivity.java  ResultSpecificAppAdapter.java  ScanActivity.java  ScanSpecificAppActivity.java  ScanSpecificAppAdapter.java  SpecifyAppActivity.java
app/src/main/java/fr/mdta/mdta/API/: APItools.java
app/src/main/java/fr/mdta/mdta/API/APIModel/ReceivedItem/: BasicScanResultItem.java  CertificateSignatureScanResultItem.java  DeveloperSignatureScanResultItem.java
app/src/main/java/fr/mdta/mdta/API/APIModel/SentItem/: CertificateSignature.java  CertificateSignatureList.java  DeveloperSignature.java  DeveloperSignatureList.java  PackagesList.java  SimplifiedPackageInfo.java
app/src/main/java/fr/mdta/mdta/API/Callback/: Callback.java
app/src/main/java/fr/mdta/mdta/API/Requester/: BasicScanRequester.java  BlacklistCertificateSignatureRequester.java  BlacklistDeveloperSignatureRequester.java  CertificateSignatureScanRequester.java  DeveloperSignatureScanRequester.java
app/src/main/java/fr/mdta/mdta/API/Requester/Base/: GetRequester.java  PostRequester.java
app/src/main/java/fr/mdta/mdta/BlacklistedPhoneNumberScanner/BroadcastReceiver/: CallReceiver.java  PhonecallReceiver.java
app/src/main/java/fr/mdta/mdta/FilesScanner/: Command.java  CommandFactory.java  DangerousMethodCall.java  FilesScanner.java  FilesScannerActivity.java  TypeScan.java
app/src/main/java/fr/mdta/mdta/FilesScanner/HashFile/: HashGenerationException.java  HashGeneratorUtils.java
app/src/main/java/fr/mdta/mdta/Model/: CertificatScan.java  CertificateScan.java  DexScan.java  FilesScan.java  IntegrityScan.java  PermissionScan.java  Result.java  Scan.java  SimplifiedPackageInfo.java
app/src/main/java/fr/mdta/mdta/PermissionsScanner/: PackageInfoFactory.java  PermissionsScannerActivity.java
app/src/main/java/fr/mdta/mdta/PermissionsScanner/Model/: SimplifiedPackageInfo.java
app/src/main/java/fr/mdta/mdta/Scans/: BlacklistedCertificateScan.java  BlacklistedDeveloperScan.java  BlacklistedDevelopperScan.java  CertificateScan.java  DexScan.java  IntegrityScan.java  PermissionScan.java  Scan.java
app/src/main/java/fr/mdta/mdta/SignaturesScanner/: CertRSA.java  SignaturesInfoFactory.java  SignaturesScannerActivity.java
app/src/main/java/fr/mdta/mdta/SignaturesScanner/Model/: PackageSignaturesInfo.java
app/src/main/java/fr/mdta/mdta/Tools/: CacheStorage.java  Command.java  CommandFactory.java  DangerousMethodCall.java  DangerousMethodPatternMap.java  PackageInfoFactory.java  ScanLauncher.java  TypeScan.java
app/src/main/jniLibs/boost/filesystem/: path.hpp
app/src/main/res/drawable/: back.xml  btn_blue.xml  btn_scan.xml  progress_bar.xml
app/src/main/res/drawable-hdpi/: btn_app.xml
app/src/main/res/layout/: activity_customscan.xml  activity_files_scanner.xml  activity_main.xml  activity_permissions_scanner.xml  activity_resultspecificapp.xml  activity_scan.xml  activity_scanspecificapp.xml  activity_signatures_scanner.xml  activity_specifyapp.xml  choose_scan_item.xml  fragment_screen_slide_page.xml  list_item.xml  list_result_item.xml  scan_item.xml  scan_result_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/fr/mdta/mdta/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
